[metadata]
name = restuml2code
version =  attr: restuml2code.__version__
description = Generate code from PlantUML embedded in reStructuredText
long_description = file: README.rst, LICENSE.rst
long_description_content_type = text/x-rst
keywords = PlantUML, reStructuredText, code generation
license = Apache-2.0 License
author = Arthur Wisz
author_email = schwart@o2.pl
classifiers =
    License :: OSI Approved :: Apache-2.0 License
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir = = src
packages = find:
python_requires = >= 3.7

[options.packages.find]
where = src

[options.package_data]
* = *.txt, *.rst

[options.entry_points]
console_scripts =
    restuml2code = restuml2code.main:main
