[metadata]
name = restuml2code
version =  attr: restuml2code.__version__
description = Generate code from SW component design in reStructuredText format.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = PlantUML, reStructuredText, code generation
license = GPL 3 License
sauthor = CimplArt
author_email = schwart@o2.pl
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir = = src
packages = find:
python_requires = >= 3.7

[options.packages.find]
where = src

[options.package_data]
* = *.txt, *.rst

[options.entry_points]
console_scripts =
    restuml2code = restuml2code.main:main